# compnal_archived

./: .clang-format  .clang-format~  .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.bak  LICENSE  README.md  compile  compile_gcc  compile_gcc~  pyproject.toml  setup.cfg  setup.py
compnal/: CMakeLists.txt  __init__.py
compnal-cpp/: CMakeLists.txt  Doxyfile
compnal-cpp/benchmark/: test.cpp
compnal-cpp/docs/: annotated.html  classes.html  dir_000000_000002.html  dir_000000_000007.html  dir_000002_000000.html  dir_000002_000001.html  dir_000002_000003.html  dir_000002_000007.html  dir_000003_000000.html  dir_000003_000001.html  dir_000003_000004.html  dir_000003_000007.html  dir_000004_000001.html  dir_000004_000002.html  dir_000004_000005.html  dir_000004_000006.html  dir_000004_000007.html  dir_000005_000001.html  dir_000005_000002.html  dir_000005_000004.html  dir_000005_000007.html  dir_000006_000001.html  dir_000006_000002.html  dir_000006_000003.html  dir_000006_000005.html  dir_000006_000007.html  dir_041db6ad6a3d44280e40e5af409429cb.html  dir_041db6ad6a3d44280e40e5af409429cb_dep.map  dir_0619a8f54b4fad7043a6de45be8fde0b.html  dir_0cf90c5da74f5d8be1a8203bdf80d6d1.html  dir_0cf90c5da74f5d8be1a8203bdf80d6d1_dep.map  dir_0cf90c5da74f5d8be1a8203bdf80d6d1_dep.md5  dir_30f63ad210ee7d9523e7eee65ffcbc66.html  dir_30f63ad210ee7d9523e7eee65ffcbc66_dep.map  dir_30f63ad210ee7d9523e7eee65ffcbc66_dep.md5  dir_5dd65160827af56e6353642206b80129.html  dir_5dd65160827af56e6353642206b80129_dep.map  dir_5dd65160827af56e6353642206b80129_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  (+56 more)
compnal-cpp/docs/d0/d01/: classcompnal_1_1lattice_1_1_two_dimensional_lattice-members.html
compnal-cpp/docs/d0/d1d/: class_cubic.html
compnal-cpp/docs/d0/d45/: classical__monte__carlo_8hpp__incl.map  classical__monte__carlo_8hpp__incl.md5
compnal-cpp/docs/d0/d56/: classical__monte__carlo_8hpp.html  classical__monte__carlo_8hpp_source.html
compnal-cpp/docs/d0/d63/: chain_8hpp__dep__incl.map  chain_8hpp__dep__incl.md5
compnal-cpp/docs/latex/: annotated.tex  dir_041db6ad6a3d44280e40e5af409429cb.tex  dir_041db6ad6a3d44280e40e5af409429cb_dep.md5  dir_0619a8f54b4fad7043a6de45be8fde0b.tex  dir_0cf90c5da74f5d8be1a8203bdf80d6d1.tex  dir_30f63ad210ee7d9523e7eee65ffcbc66.tex  dir_5dd65160827af56e6353642206b80129.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_7c753a3df59226bdcb94a5250e725fe4.tex  dir_9f7d7cd8df7a7e232042ce16d6062d12.tex  dir_eebd4738e4684bba3f7224381e0aec0e.tex  dir_eebd4738e4684bba3f7224381e0aec0e_dep.md5  files.tex  hierarchy.tex  namespaces.tex  refman.tex
compnal-cpp/docs/search/: all_0.js  all_1.js  all_11.js  all_13.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  enumvalues_8.js  enumvalues_9.js  files_0.js  (+34 more)
compnal-cpp/src/blas/: all.hpp  compressed_row_storage.hpp
compnal-cpp/src/interaction/: polynomial_any_interaction.hpp  quadratic_any_interaction.hpp
compnal-cpp/src/lattice/: all.hpp  any_lattice.hpp  base_one_dimensional_lattice.hpp  base_three_dimensional_lattice.hpp  base_two_dimensional_lattice.hpp  boundary_condition.hpp  chain.hpp  classical_any_type.hpp  cubic.hpp  honeycomb.hpp  infinite_range.hpp  quantum_any_type.hpp  square.hpp  triangle.hpp  two_dimensional_lattice.hpp
compnal-cpp/src/model/: all.hpp  base_polynomial_general_model.hpp  base_quadratic_general_model.hpp  lattice.hpp  polynomial_general_interaction.hpp  polynomial_general_model.hpp  polynomial_ising.hpp  quadratic_general_interaction.hpp  quadratic_general_model.hpp
compnal-cpp/src/solver/: all.hpp  classical_monte_carlo.hpp
compnal-cpp/src/utility/: all.hpp  hash.hpp  integer.hpp  random_number.hpp  sort.hpp  type.hpp
compnal-cpp/tests/: test_main.cpp
compnal-cpp/tests/interaction/: test_quadratic_any_interaction.hpp
compnal-cpp/tests/lattice/: test_any_lattice.hpp  test_base_one_dimensional_lattice.hpp  test_base_three_dimensional_lattice.hpp  test_base_two_dimensional_lattice.hpp  test_chain.hpp  test_infinite_range.hpp  test_square.hpp  test_two_dimensional_lattice.hpp
compnal-cpp/tests/model/: test_polynomial_ising.hpp
compnal-cpp/tests/solver/: test_classical_monte_carlo.hpp  test_cmc_ising.hpp  test_cmc_polynomial_ising.hpp
compnal-cpp/tests/utility/: test_integer.hpp
compnal-python/: CMakeLists.txt  compile.txt  setup.py
compnal-python/base_compnal/: CMakeLists.txt  pybind11_main.cpp
compnal-python/base_compnal/src/: pybind11_lattice.hpp  pybind11_model.cpp  pybind11_model.hpp  pybind11_solver.cpp  pybind11_solver.hpp
compnal-python/cmake/: pybind11.cmake
compnal-python/compnal/: __init__.py  lattice.py
compnal-python/compnal/lattice/: __init__.py  boundary_condition.py  higher_dimension.py  one_dimension.py  three_dimension.py  two_dimension.py
compnal-python/compnal/model/: __init__.py  ising.py  polynomial_ising.py
compnal-python/compnal/solver/: __init__.py  classical_monte_carlo.py  updater.py
compnal-python/notebooks/classical_monte_carlo/: out.eps  polynomial_ising.ipynb
compnal-python/tests/: test.py  test_lattice.py  test_model_ising.py  test_model_polynomial_ising.py
compnal/base_compnal/: CMakeLists.txt  pybind11_main.cpp
compnal/base_compnal/src/: pybind11_lattice.hpp  pybind11_model.hpp  pybind11_solver.hpp
compnal/compnal/: main.cpp
compnal/lattice/: boundary_condition.py  higher_dimension.py  two_dimension.py
compnal/model/: __init__.py  _base_u1_spin_1d.py  base_u1_electron_1d.py  ising.py  polynomial_ising.py
compnal/solver/: __init__.py  algorithm.py  classical_monte_carlo.py
compnal/tests/: test_lattice.py  test_model_ising.py  test_model_polynomial_ising.py
(+4031 files in other folders)
