[install_lib]
optimize = 1
compile = 1

[aliases]
test=pytest

[metadata]
name = compnal
author = Kohei Suzuki
description = Condensed Matter Physics Numerical Analytics Libirary
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
license = Apache License 2.0
classifiers =
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS
project_urls =
    Source=https://github.com/K-Suzuki-Jij/compnal

[options]
python_requires = >=3.7, <3.11
install_requires =
    requests >= 2.28.0, < 2.29.0
    typing-extensions >= 4.2.0
tests_require =
    pytest
    pytest-mock
    pytest-cov
    pytest-runner
    pytest-randomly
    pytest-spec
    coverage
